--- a/conf/config.json
+++ b/conf/config.json
@@ -6,6 +6,8 @@
   "server": {
     "run_mode": "run_mode",
     "http_port": 8000,
-    "refresh_time": 10
+    "refresh_time": 10,
+    "sub_path": "goindex",
+    "url": "http://www.cugxuan.cn:8000"
   }
 }
