--- a/conf/config.json
+++ b/conf/config.json
@@ -8,6 +8,7 @@
     "http_port": 8000,
     "refresh_time": 10,
     "sub_path": "goindex",
-    "url": "http://www.cugxuan.cn:8000"
+    "site_url": "https://goindex.cugxuan.cn",
+    "bind_global": false
   }
 }
