--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "client_id": "88966400-cb81-49cb-89c2-6d09f0a3d9e2",
+  "client_id": "16e320f7-e427-4612-88da-f3d03e944d40",
   "redirect_url": "http://localhost:8000/auth",
-  "client_secret": "/FKad]FPtKNk-=j11aPwEOBSxYUYUU54",
+  "client_secret": "lURpL3U@bBlmJ0:_dnU.LeLOGNGdVT30",
   "state": "23333",
   "server": {
     "web_port": 8001,
