增加指定vue dist目录配置参数

--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "port": 8000,
     "refresh_time": 10,
     "bind_global": true,
+    "dist_path": "./dist/",
     "site_url": "http://localhost:8000",
     "folder_sub": "/"
   }
