1. 支持世纪互联，由于没有账号，暂不提供默认 clientid 2. 修改对于教育账号使用情况的描述

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "redirect_url": "http://localhost:8000/auth",
   "client_secret": "lURpL3U@bBlmJ0:_dnU.LeLOGNGdVT30",
   "state": "23333",
+  "china_cloud": false,
   "server": {
     "port": 8000,
     "refresh_time": 10,
