--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
 script:
   # https://docs.travis-ci.com/user/environment-variables/
   - 'bash -n build/build.sh'
-  - '[ -z "$TRAVIS_TAG" ] && bash build/build.sh build || bash build/build.sh release'
+  - '[ -z "$TRAVIS_TAG" ] && { bash build/build.sh build; ./gonelist --version; } || bash build/build.sh release'
 before_install:
   - ls -l
 after_script:
