--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "client_secret": "lURpL3U@bBlmJ0:_dnU.LeLOGNGdVT30",
   "redirect_url": "http://localhost:8000/auth",
   "state": "23333",
+  "token_path": "",
   "server": {
     "port": 8000,
     "refresh_time": 10,
