增加环境变量设置配置文件路径适用群晖的docker

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -4,6 +4,6 @@ ARG VERSION=v0.4.1
 COPY gonelist /bin/gonelist
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
     apk add curl wget && \
-    cd /etc && curl -sL https://github.com/Sillywa/gonelist-web/releases/download/${VERSION}/dist.tar.gz | tar -zxvf -
+    cd /bin && curl -sL https://github.com/Sillywa/gonelist-web/releases/download/${VERSION}/dist.tar.gz | tar -zxvf -
 EXPOSE 8000
 ENTRYPOINT ["/bin/gonelist"]
