alpine切换到3.12,Docker增加时区，修复token_path问题

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,9 +1,18 @@
-FROM alpine:3.11.6
-WORKDIR /root
+FROM alpine:3.12
+
+WORKDIR /opt
 ARG VERSION=v0.4.1
+ARG TZ="Asia/Shanghai"
+
 COPY gonelist /bin/gonelist
+
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
-    apk add curl wget && \
-    cd /bin && curl -sL https://github.com/Sillywa/gonelist-web/releases/download/${VERSION}/dist.tar.gz | tar -zxvf -
+    apk add curl wget tzdata bind-tools busybox-extras ca-certificates bash strace && \
+    ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime && \
+    echo ${TZ} > /etc/timezone && \
+    cd /opt && curl -sL https://github.com/Sillywa/gonelist-web/releases/download/${VERSION}/dist.tar.gz | tar -zxvf - && \
+    rm -rf /var/cache/apk/*
+
 EXPOSE 8000
+
 ENTRYPOINT ["/bin/gonelist"]
