修复ci的构建没执行

--- a/.github/workflows/multi-arch.yml
+++ b/.github/workflows/multi-arch.yml
@@ -57,6 +57,7 @@ jobs:
         id: build
         run: |
           bash -n build/build.sh buildx
+          bash build/build.sh buildx
 
       - name: release build 
         id: build_release
