添加版本信息接口，优化索引方式

--- a/example/config.yml
+++ b/example/config.yml
@@ -1,4 +1,6 @@
 # gonelist 配置文件，注意配置字段和信息中间有个空格
+# name 表示你的站点的名字会显示在每个页面的左上角
+name: GONEList
 # Remote name，可选 onedrive, chinacloud
 remote: onedrive
 # onedrive 的获取层级，默认获取两层
