增加一些配置项，修复重定向

--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,8 @@
 
 # name 表示你的站点的名字，会显示在每个页面的左上角
 name: GONEList
+# page_title 是在浏览器标签栏的名字
+page_title: GONEList
 
 # gonelist 服务设置，不建议修改
 server:
@@ -12,7 +14,7 @@ server:
   gzip: true         # 是否开启 gzip 加速, 默认开启
   port: 8000         # 应用监听的端口
   site_url: http://localhost:8000 # 不建议修改，在启动后会自适应调整
-  enable_upload: false
+  enable_upload: false  # 是否开启上传功能
 
 # 网盘挂载的类型，当前仅支持 onedrive
 list_type: onedrive
