--- a/config.yml
+++ b/config.yml
@@ -25,6 +25,19 @@ admin:
   # 大文件分片上传时得分片大小，默认为32MB,数字为1表示320kb
   upload_slice_size: 100
 
+
+# 本地文件挂载配置，请谨慎挂载，挂载后在管理员权限下将拥有删除文件和上传文件的权限
+local:
+  # 是否启用本地文件挂载
+  enable: false
+  # 本地文件挂载的名称，即挂载目录在跟目录显示的名称
+  name: local
+  # 本地文件挂载的路径，请使用/而不是\\,支持绝对路径和相对路径
+  # eg: 绝对路径 D:/Test  /root/test
+  # eg: 相对路径 ./test  ../
+  path: ./
+
+
 # 网盘挂载的类型，当前仅支持 onedrive
 list_type: onedrive
 
