--- a/.github/workflows/multi-arch.yml
+++ b/.github/workflows/multi-arch.yml
@@ -14,7 +14,8 @@ jobs:
       DockerUser: zhangguanzhang
       DockerPass: ${{ secrets.DockerPass }} 
       # list of architectures for build
-      PLATFORMS: linux/amd64,linux/arm64 # linux/s390x,linux/ppc64le,
+      # https://github.com/containerd/containerd/blob/v1.4.3/platforms/platforms.go#L63
+      PLATFORMS: linux/amd64,linux/arm64,linux/arm # linux/s390x,linux/ppc64le,
 
     steps:
       - name: Checkout
