fix 再开启本地挂载下访问空目录会报错 add 添加本地目录readme文件支持 add 添加不使用onedrive,仅使用本地目录挂载功能支持

--- a/config.yml
+++ b/config.yml
@@ -43,7 +43,7 @@ list_type: onedrive
 
 # onedrive 设置选项
 onedrive:
-  # Remote name，可选 onedrive, chinacloud（世纪互联）
+  # Remote name，可选 onedrive, chinacloud（世纪互联）,可选local,选中local时仅支持挂载本地目录
   remote: onedrive
 
   # onedrive 的刷新模式，all，fresh 两种模式
